syntax = "proto3";

package common;

option go_package = "github.com/ydb-platform/nbs/cloud/tasks/common/protos";

////////////////////////////////////////////////////////////////////////////////

message ErrorDetails {
    int64 Code = 1;
    string Message = 2;
    bool Internal = 3;
}
